backend-stack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: tonystark0542/bookstore-backend:v2 
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}' 
spec:
  type: NodePort 
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
